plugins {
	id 'java-library'
	id 'maven-publish'
	id 'signing'
	id 'io.freefair.lombok' version '5.0.0'
}

allprojects {
	apply plugin: 'java-library'
	apply plugin: 'io.freefair.lombok'
	group = 'org.pharmgkb.parsers'
	version = '0.4'
	java {
		sourceCompatibility = JavaVersion.VERSION_14
		targetCompatibility = JavaVersion.VERSION_14
	}
}

subprojects {
	repositories {
		mavenCentral()
	}
	dependencies {
		implementation 'com.google.guava:guava:29.0-jre'
		implementation 'org.slf4j:slf4j-api:1.7.30'
		implementation 'com.google.code.findbugs:jsr305:3.0.2'
		testImplementation 'junit:junit:4.12'
		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
		testImplementation 'org.assertj:assertj-core:3.15.0'
		testImplementation 'org.assertj:assertj-guava:3.3.0'
		testImplementation 'org.mockito:mockito-core:3.3.3'
	}
}


publishing {
	publications {
		library(MavenPublication) {
			from components.java
		}
	}
	repositories {
		maven {
			url = uri("${buildDir}/publishing-repository")
		}
	}
}
